Added a new migration

--- a/README.rdoc
+++ b/README.rdoc
@@ -10,7 +10,7 @@ Password: password
 
 Points to note: 
 1. Working on UI
-2. Yet to implement the bonus credit requirements.
+2. Yet to implement the bonus credit requirements - Added email feature, recommendation pending
 3. Added new feature wherein the admin can checkout book for himself as well.
 
 
