--- a/README.rdoc
+++ b/README.rdoc
@@ -8,10 +8,11 @@ Email: admin@tzn.com
 Password: password
 
 Points to note:
+
 Admin Functionality:
 1. Admin can view list of books, list of users.
 2. Admin can edit book details, user details (except that of preconfigured admin).
-3. Admin can create admins and library members
+3. Admin can create admins, library members and books.
 
 User Functionality:
 1. Users can search for books using isbn, name, author, description, status(available/unavailable) of books.
@@ -21,10 +22,11 @@ User Functionality:
 
 Extra Functionality:
 1. users can recommend a book which the admin can approve or reject.
-2. email notification can be requested when a book is returned.
+2. email notification can be requested for a checked out books so that the user is notified by email when the book is available.
+
 
 Specifications:
 1. Ruby version : 2.x
 2. Database : postgresql
 
-Note: One row each for checkin and checkout
+
