--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,7 @@
 # LibSys by team tzn
 
 Code Repo:https://github.com/tarunchhabra26/tzn
+
 App live on : https://thawing-hamlet-6916.herokuapp.com/
 
 Preconfigured Admin Credentials:
@@ -22,7 +23,7 @@ User Functionality:
 
 Extra Functionality:
 1. users can recommend a book which the admin can approve or reject.
-2. email notification can be requested for a checked out books so that the user is notified by email when the book is available.
+2. email notification can be requested for a checked out book so that the user is notified by email when the book is available.
 
 
 Specifications:
