--- a/README.rdoc
+++ b/README.rdoc
@@ -14,6 +14,9 @@ Admin Functionality:
 1. Admin can view list of books, list of users.
 2. Admin can edit book details, user details (except that of preconfigured admin).
 3. Admin can create admins, library members and books.
+4. Admin cannot delete a user if he has checked out books.
+5. Admin cannot delete a book if the book has been checked out.
+
 
 User Functionality:
 1. Users can search for books using isbn, name, author, description, status(available/unavailable) of books.
@@ -23,7 +26,9 @@ User Functionality:
 
 Extra Functionality:
 1. users can recommend a book which the admin can approve or reject.
-2. email notification can be requested for a checked out book so that the user is notified by email when the book is available.
+2. email notification can be requested for a checked out book so that the user is notified by email when the book is   available.
+
+  
 
 
 Specifications:
